Translator/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    resPackage

Grammar

Rule 0     S' -> init
Rule 1     init -> listaInstrucciones
Rule 2     import -> resImport PARENTESISA CADENA PARENTESISC PUNTOCOMA
Rule 3     arreglo -> resVar IDENTIFICADOR CORCHETEA ENTERO CORCHETEC resFloat64 PUNTOCOMA
Rule 4     variable -> resVar listaVariable resFloat64 PUNTOCOMA
Rule 5     listaVariable -> listaVariable COMA IDENTIFICADOR
Rule 6     listaVariable -> IDENTIFICADOR
Rule 7     listaInstrucciones -> listaInstrucciones instruccion
Rule 8     listaInstrucciones -> instruccion
Rule 9     instruccion -> function
Rule 10    instruccion -> temporal PUNTOCOMA
Rule 11    instruccion -> etiqueta
Rule 12    instruccion -> ir PUNTOCOMA
Rule 13    instruccion -> evaluacion
Rule 14    instruccion -> imprimir PUNTOCOMA
Rule 15    instruccion -> llamar PUNTOCOMA
Rule 16    instruccion -> acceso PUNTOCOMA
Rule 17    instruccion -> resReturn PUNTOCOMA
Rule 18    instriccion -> LLAVEC
Rule 19    function -> resFunc IDENTIFICADOR PARENTESISA PARENTESISC LLAVEA
Rule 20    function -> resFunc resMain PARENTESISA PARENTESISC LLAVEA
Rule 21    temporal -> IDENTIFICADOR IGUAL tipo
Rule 22    temporal -> IDENTIFICADOR IGUAL IDENTIFICADOR CORCHETEA resInt PARENTESISA tipo PARENTESISC CORCHETEC
Rule 23    temporal -> IDENTIFICADOR IGUAL IDENTIFICADOR CORCHETEA tipo CORCHETEC
Rule 24    temporal -> IDENTIFICADOR IGUAL tipo operador tipo
Rule 25    temporal -> IDENTIFICADOR IGUAL resMath PUNTO resMod PARENTESISA tipo COMA tipo PARENTESISC
Rule 26    temporal -> IDENTIFICADOR IGUAL RESTA tipo
Rule 27    tipo -> ENTERO
Rule 28    tipo -> FLOTANTE
Rule 29    tipo -> IDENTIFICADOR
Rule 30    operador -> SUMA
Rule 31    operador -> RESTA
Rule 32    operador -> MULTIPLICACION
Rule 33    operador -> DIVISION
Rule 34    operador -> MAYOR
Rule 35    operador -> MENOR
Rule 36    operador -> MAYORIGUAL
Rule 37    operador -> MENORIGUAL
Rule 38    operador -> IGUALIGUAL
Rule 39    operador -> DIFERENTE
Rule 40    etiqueta -> IDENTIFICADOR DOSPUNTOS
Rule 41    ir -> resGoto IDENTIFICADOR
Rule 42    evaluacion -> resIf PARENTESISA tipo operador tipo PARENTESISC LLAVEA resGoto IDENTIFICADOR PUNTOCOMA LLAVEC
Rule 43    imprimir -> resFmt PUNTO resPrintf PARENTESISA CADENA COMA tipo PARENTESISC
Rule 44    imprimir -> resFmt PUNTO resPrintf PARENTESISA CADENA COMA IDENTIFICADOR CORCHETEA resInt PARENTESISA tipo PARENTESISC CORCHETEC PARENTESISC
Rule 45    imprimir -> resFmt PUNTO resPrintf PARENTESISA CADENA COMA IDENTIFICADOR CORCHETEA tipo CORCHETEC PARENTESISC
Rule 46    imprimir -> resFmt PUNTO resPrintf PARENTESISA CADENA COMA resInt PARENTESISA tipo PARENTESISC PARENTESISC
Rule 47    llamar -> IDENTIFICADOR PARENTESISA PARENTESISC
Rule 48    acceso -> IDENTIFICADOR CORCHETEA resInt PARENTESISA tipo PARENTESISC CORCHETEC IGUAL tipo
Rule 49    acceso -> IDENTIFICADOR CORCHETEA tipo CORCHETEC IGUAL tipo

Terminals, with rules where they appear

CADENA               : 2 43 44 45 46
COMA                 : 5 25 43 44 45 46
CORCHETEA            : 3 22 23 44 45 48 49
CORCHETEC            : 3 22 23 44 45 48 49
DIFERENTE            : 39
DIVISION             : 33
DOSPUNTOS            : 40
ENTERO               : 3 27
FLOTANTE             : 28
IDENTIFICADOR        : 3 5 6 19 21 22 22 23 23 24 25 26 29 40 41 42 44 45 47 48 49
IGUAL                : 21 22 23 24 25 26 48 49
IGUALIGUAL           : 38
LLAVEA               : 19 20 42
LLAVEC               : 18 42
MAYOR                : 34
MAYORIGUAL           : 36
MENOR                : 35
MENORIGUAL           : 37
MULTIPLICACION       : 32
PARENTESISA          : 2 19 20 22 25 42 43 44 44 45 46 46 47 48
PARENTESISC          : 2 19 20 22 25 42 43 44 44 45 46 46 47 48
PUNTO                : 25 43 44 45 46
PUNTOCOMA            : 2 3 4 10 12 14 15 16 17 42
RESTA                : 26 31
SUMA                 : 30
error                : 
resFloat64           : 3 4
resFmt               : 43 44 45 46
resFunc              : 19 20
resGoto              : 41 42
resIf                : 42
resImport            : 2
resInt               : 22 44 46 48
resMain              : 20
resMath              : 25
resMod               : 25
resPackage           : 
resPrintf            : 43 44 45 46
resReturn            : 17
resVar               : 3 4

Nonterminals, with rules where they appear

acceso               : 16
arreglo              : 
etiqueta             : 11
evaluacion           : 13
function             : 9
import               : 
imprimir             : 14
init                 : 0
instriccion          : 
instruccion          : 7 8
ir                   : 12
listaInstrucciones   : 1 7
listaVariable        : 4 5
llamar               : 15
operador             : 24 42
temporal             : 10
tipo                 : 21 22 23 24 24 25 25 26 42 42 43 44 45 46 48 48 49 49
variable             : 

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . listaInstrucciones
    (7) listaInstrucciones -> . listaInstrucciones instruccion
    (8) listaInstrucciones -> . instruccion
    (9) instruccion -> . function
    (10) instruccion -> . temporal PUNTOCOMA
    (11) instruccion -> . etiqueta
    (12) instruccion -> . ir PUNTOCOMA
    (13) instruccion -> . evaluacion
    (14) instruccion -> . imprimir PUNTOCOMA
    (15) instruccion -> . llamar PUNTOCOMA
    (16) instruccion -> . acceso PUNTOCOMA
    (17) instruccion -> . resReturn PUNTOCOMA
    (19) function -> . resFunc IDENTIFICADOR PARENTESISA PARENTESISC LLAVEA
    (20) function -> . resFunc resMain PARENTESISA PARENTESISC LLAVEA
    (21) temporal -> . IDENTIFICADOR IGUAL tipo
    (22) temporal -> . IDENTIFICADOR IGUAL IDENTIFICADOR CORCHETEA resInt PARENTESISA tipo PARENTESISC CORCHETEC
    (23) temporal -> . IDENTIFICADOR IGUAL IDENTIFICADOR CORCHETEA tipo CORCHETEC
    (24) temporal -> . IDENTIFICADOR IGUAL tipo operador tipo
    (25) temporal -> . IDENTIFICADOR IGUAL resMath PUNTO resMod PARENTESISA tipo COMA tipo PARENTESISC
    (26) temporal -> . IDENTIFICADOR IGUAL RESTA tipo
    (40) etiqueta -> . IDENTIFICADOR DOSPUNTOS
    (41) ir -> . resGoto IDENTIFICADOR
    (42) evaluacion -> . resIf PARENTESISA tipo operador tipo PARENTESISC LLAVEA resGoto IDENTIFICADOR PUNTOCOMA LLAVEC
    (43) imprimir -> . resFmt PUNTO resPrintf PARENTESISA CADENA COMA tipo PARENTESISC
    (44) imprimir -> . resFmt PUNTO resPrintf PARENTESISA CADENA COMA IDENTIFICADOR CORCHETEA resInt PARENTESISA tipo PARENTESISC CORCHETEC PARENTESISC
    (45) imprimir -> . resFmt PUNTO resPrintf PARENTESISA CADENA COMA IDENTIFICADOR CORCHETEA tipo CORCHETEC PARENTESISC
    (46) imprimir -> . resFmt PUNTO resPrintf PARENTESISA CADENA COMA resInt PARENTESISA tipo PARENTESISC PARENTESISC
    (47) llamar -> . IDENTIFICADOR PARENTESISA PARENTESISC
    (48) acceso -> . IDENTIFICADOR CORCHETEA resInt PARENTESISA tipo PARENTESISC CORCHETEC IGUAL tipo
    (49) acceso -> . IDENTIFICADOR CORCHETEA tipo CORCHETEC IGUAL tipo

    resReturn       shift and go to state 12
    resFunc         shift and go to state 13
    IDENTIFICADOR   shift and go to state 14
    resGoto         shift and go to state 15
    resIf           shift and go to state 16
    resFmt          shift and go to state 17

    init                           shift and go to state 1
    listaInstrucciones             shift and go to state 2
    instruccion                    shift and go to state 3
    function                       shift and go to state 4
    temporal                       shift and go to state 5
    etiqueta                       shift and go to state 6
    ir                             shift and go to state 7
    evaluacion                     shift and go to state 8
    imprimir                       shift and go to state 9
    llamar                         shift and go to state 10
    acceso                         shift and go to state 11

state 1

    (0) S' -> init .



state 2

    (1) init -> listaInstrucciones .
    (7) listaInstrucciones -> listaInstrucciones . instruccion
    (9) instruccion -> . function
    (10) instruccion -> . temporal PUNTOCOMA
    (11) instruccion -> . etiqueta
    (12) instruccion -> . ir PUNTOCOMA
    (13) instruccion -> . evaluacion
    (14) instruccion -> . imprimir PUNTOCOMA
    (15) instruccion -> . llamar PUNTOCOMA
    (16) instruccion -> . acceso PUNTOCOMA
    (17) instruccion -> . resReturn PUNTOCOMA
    (19) function -> . resFunc IDENTIFICADOR PARENTESISA PARENTESISC LLAVEA
    (20) function -> . resFunc resMain PARENTESISA PARENTESISC LLAVEA
    (21) temporal -> . IDENTIFICADOR IGUAL tipo
    (22) temporal -> . IDENTIFICADOR IGUAL IDENTIFICADOR CORCHETEA resInt PARENTESISA tipo PARENTESISC CORCHETEC
    (23) temporal -> . IDENTIFICADOR IGUAL IDENTIFICADOR CORCHETEA tipo CORCHETEC
    (24) temporal -> . IDENTIFICADOR IGUAL tipo operador tipo
    (25) temporal -> . IDENTIFICADOR IGUAL resMath PUNTO resMod PARENTESISA tipo COMA tipo PARENTESISC
    (26) temporal -> . IDENTIFICADOR IGUAL RESTA tipo
    (40) etiqueta -> . IDENTIFICADOR DOSPUNTOS
    (41) ir -> . resGoto IDENTIFICADOR
    (42) evaluacion -> . resIf PARENTESISA tipo operador tipo PARENTESISC LLAVEA resGoto IDENTIFICADOR PUNTOCOMA LLAVEC
    (43) imprimir -> . resFmt PUNTO resPrintf PARENTESISA CADENA COMA tipo PARENTESISC
    (44) imprimir -> . resFmt PUNTO resPrintf PARENTESISA CADENA COMA IDENTIFICADOR CORCHETEA resInt PARENTESISA tipo PARENTESISC CORCHETEC PARENTESISC
    (45) imprimir -> . resFmt PUNTO resPrintf PARENTESISA CADENA COMA IDENTIFICADOR CORCHETEA tipo CORCHETEC PARENTESISC
    (46) imprimir -> . resFmt PUNTO resPrintf PARENTESISA CADENA COMA resInt PARENTESISA tipo PARENTESISC PARENTESISC
    (47) llamar -> . IDENTIFICADOR PARENTESISA PARENTESISC
    (48) acceso -> . IDENTIFICADOR CORCHETEA resInt PARENTESISA tipo PARENTESISC CORCHETEC IGUAL tipo
    (49) acceso -> . IDENTIFICADOR CORCHETEA tipo CORCHETEC IGUAL tipo

    $end            reduce using rule 1 (init -> listaInstrucciones .)
    resReturn       shift and go to state 12
    resFunc         shift and go to state 13
    IDENTIFICADOR   shift and go to state 14
    resGoto         shift and go to state 15
    resIf           shift and go to state 16
    resFmt          shift and go to state 17

    instruccion                    shift and go to state 18
    function                       shift and go to state 4
    temporal                       shift and go to state 5
    etiqueta                       shift and go to state 6
    ir                             shift and go to state 7
    evaluacion                     shift and go to state 8
    imprimir                       shift and go to state 9
    llamar                         shift and go to state 10
    acceso                         shift and go to state 11

state 3

    (8) listaInstrucciones -> instruccion .

    resReturn       reduce using rule 8 (listaInstrucciones -> instruccion .)
    resFunc         reduce using rule 8 (listaInstrucciones -> instruccion .)
    IDENTIFICADOR   reduce using rule 8 (listaInstrucciones -> instruccion .)
    resGoto         reduce using rule 8 (listaInstrucciones -> instruccion .)
    resIf           reduce using rule 8 (listaInstrucciones -> instruccion .)
    resFmt          reduce using rule 8 (listaInstrucciones -> instruccion .)
    $end            reduce using rule 8 (listaInstrucciones -> instruccion .)


state 4

    (9) instruccion -> function .

    resReturn       reduce using rule 9 (instruccion -> function .)
    resFunc         reduce using rule 9 (instruccion -> function .)
    IDENTIFICADOR   reduce using rule 9 (instruccion -> function .)
    resGoto         reduce using rule 9 (instruccion -> function .)
    resIf           reduce using rule 9 (instruccion -> function .)
    resFmt          reduce using rule 9 (instruccion -> function .)
    $end            reduce using rule 9 (instruccion -> function .)


state 5

    (10) instruccion -> temporal . PUNTOCOMA

    PUNTOCOMA       shift and go to state 19


state 6

    (11) instruccion -> etiqueta .

    resReturn       reduce using rule 11 (instruccion -> etiqueta .)
    resFunc         reduce using rule 11 (instruccion -> etiqueta .)
    IDENTIFICADOR   reduce using rule 11 (instruccion -> etiqueta .)
    resGoto         reduce using rule 11 (instruccion -> etiqueta .)
    resIf           reduce using rule 11 (instruccion -> etiqueta .)
    resFmt          reduce using rule 11 (instruccion -> etiqueta .)
    $end            reduce using rule 11 (instruccion -> etiqueta .)


state 7

    (12) instruccion -> ir . PUNTOCOMA

    PUNTOCOMA       shift and go to state 20


state 8

    (13) instruccion -> evaluacion .

    resReturn       reduce using rule 13 (instruccion -> evaluacion .)
    resFunc         reduce using rule 13 (instruccion -> evaluacion .)
    IDENTIFICADOR   reduce using rule 13 (instruccion -> evaluacion .)
    resGoto         reduce using rule 13 (instruccion -> evaluacion .)
    resIf           reduce using rule 13 (instruccion -> evaluacion .)
    resFmt          reduce using rule 13 (instruccion -> evaluacion .)
    $end            reduce using rule 13 (instruccion -> evaluacion .)


state 9

    (14) instruccion -> imprimir . PUNTOCOMA

    PUNTOCOMA       shift and go to state 21


state 10

    (15) instruccion -> llamar . PUNTOCOMA

    PUNTOCOMA       shift and go to state 22


state 11

    (16) instruccion -> acceso . PUNTOCOMA

    PUNTOCOMA       shift and go to state 23


state 12

    (17) instruccion -> resReturn . PUNTOCOMA

    PUNTOCOMA       shift and go to state 24


state 13

    (19) function -> resFunc . IDENTIFICADOR PARENTESISA PARENTESISC LLAVEA
    (20) function -> resFunc . resMain PARENTESISA PARENTESISC LLAVEA

    IDENTIFICADOR   shift and go to state 25
    resMain         shift and go to state 26


state 14

    (21) temporal -> IDENTIFICADOR . IGUAL tipo
    (22) temporal -> IDENTIFICADOR . IGUAL IDENTIFICADOR CORCHETEA resInt PARENTESISA tipo PARENTESISC CORCHETEC
    (23) temporal -> IDENTIFICADOR . IGUAL IDENTIFICADOR CORCHETEA tipo CORCHETEC
    (24) temporal -> IDENTIFICADOR . IGUAL tipo operador tipo
    (25) temporal -> IDENTIFICADOR . IGUAL resMath PUNTO resMod PARENTESISA tipo COMA tipo PARENTESISC
    (26) temporal -> IDENTIFICADOR . IGUAL RESTA tipo
    (40) etiqueta -> IDENTIFICADOR . DOSPUNTOS
    (47) llamar -> IDENTIFICADOR . PARENTESISA PARENTESISC
    (48) acceso -> IDENTIFICADOR . CORCHETEA resInt PARENTESISA tipo PARENTESISC CORCHETEC IGUAL tipo
    (49) acceso -> IDENTIFICADOR . CORCHETEA tipo CORCHETEC IGUAL tipo

    IGUAL           shift and go to state 27
    DOSPUNTOS       shift and go to state 30
    PARENTESISA     shift and go to state 29
    CORCHETEA       shift and go to state 28


state 15

    (41) ir -> resGoto . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 31


state 16

    (42) evaluacion -> resIf . PARENTESISA tipo operador tipo PARENTESISC LLAVEA resGoto IDENTIFICADOR PUNTOCOMA LLAVEC

    PARENTESISA     shift and go to state 32


state 17

    (43) imprimir -> resFmt . PUNTO resPrintf PARENTESISA CADENA COMA tipo PARENTESISC
    (44) imprimir -> resFmt . PUNTO resPrintf PARENTESISA CADENA COMA IDENTIFICADOR CORCHETEA resInt PARENTESISA tipo PARENTESISC CORCHETEC PARENTESISC
    (45) imprimir -> resFmt . PUNTO resPrintf PARENTESISA CADENA COMA IDENTIFICADOR CORCHETEA tipo CORCHETEC PARENTESISC
    (46) imprimir -> resFmt . PUNTO resPrintf PARENTESISA CADENA COMA resInt PARENTESISA tipo PARENTESISC PARENTESISC

    PUNTO           shift and go to state 33


state 18

    (7) listaInstrucciones -> listaInstrucciones instruccion .
